--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.5
+  uuid: ^4.4.0
+  get_it: ^7.6.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_local_notifications: ^16.3.2
+  intl: ^0.18.1 # Para formatação de data/hora
+  timezone: ^0.9.2 # Necessário para flutter_local_notifications agendamento preciso
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
